<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/year_dropdown_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoursesActivity">

    <TextView
        android:id="@+id/enter_prev_courses_header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_previous_courses"
        android:textSize="35sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/enter_subject_textview"
        android:layout_width="209dp"
        android:layout_height="39dp"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="476dp" />

    <EditText
        android:id="@+id/enter_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_number"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="534dp" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="626dp" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        tools:layout_editor_absoluteX="228dp"
        tools:layout_editor_absoluteY="626dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="132dp"
        android:layout_height="64dp"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="204dp" />

    <TextView
        android:id="@+id/year_header_textview"
        android:layout_width="90dp"
        android:layout_height="34dp"
        android:text="@string/year"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="155dp" />

    <TextView
        android:id="@+id/quarter_header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quarter"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="155dp" />

    <Spinner
        android:id="@+id/quarter_dropdown_container"
        android:layout_width="133dp"
        android:layout_height="63dp"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="204dp" />

</androidx.constraintlayout.widget.ConstraintLayout>